--- a/src/Day/Day.scss
+++ b/src/Day/Day.scss
@@ -1,5 +1,5 @@
-@import "../variables";
-@import "../Calendar/Range/Range";
+@import '../variables';
+@import '../Calendar/Range/Range';
 
 .root {
   display: inline-block;
@@ -14,8 +14,29 @@
   cursor: pointer;
   user-select: none;
 
+  &.hovered {
+    background-color: $cellHoverBg !important;
+    box-shadow: none !important;
+
+    &:before {
+      display: none;
+    }
+
+    &.startOfWeek {
+      border-top-left-radius: ($rowHeight - 2px) / 2;
+      border-bottom-left-radius: ($rowHeight - 2px) / 2;
+    }
+
+    &.endOfWeek {
+      border-top-right-radius: ($rowHeight - 2px) / 2;
+      border-bottom-right-radius: ($rowHeight - 2px) / 2;
+    }
+  }
+
   &.enabled {
-    &.highlighted, &:active, &:hover {
+    &.highlighted,
+    &:active,
+    &:hover {
       position: relative;
       z-index: 1;
 
@@ -30,41 +51,44 @@
     &:hover:before {
       opacity: 0.5;
     }
-    &.highlighted:before, &:active:before {
+    &.highlighted:before,
+    &:active:before {
       opacity: 1;
     }
   }
 
   &:first-child {
-      position: relative;
+    position: relative;
   }
 
   &.today {
-      position: relative;
-      z-index: 2;
+    position: relative;
+    z-index: 2;
 
-      > span {
-          color: $textColor;
-      }
+    > span {
+      color: $textColor;
+    }
 
-      &.disabled > span {
-          color: $textColorDisabled;
-      }
+    &.disabled > span {
+      color: $textColorDisabled;
+    }
 
-      &:before {
-          @include circle($rowHeight);
-          box-shadow: inset 0 0 0 1px;
-          z-index: -1;
-      }
+    &:before {
+      @include circle($rowHeight);
+      box-shadow: inset 0 0 0 1px;
+      z-index: -1;
+    }
 
-      &.disabled:before {
-          box-shadow: inset 0 0 0 1px #BBB;
-      }
+    &.disabled:before {
+      box-shadow: inset 0 0 0 1px #bbb;
+    }
   }
+
   &.selected {
     position: relative;
 
-    > .month, > .year {
+    > .month,
+    > .year {
       display: none;
     }
 
@@ -95,7 +119,8 @@
   }
 }
 
-.month, .year {
+.month,
+.year {
   position: absolute;
   left: 0;
   right: 0;
@@ -117,7 +142,8 @@
  * Range selection styles
  */
 .range.selected {
-  &.start, &.end {
+  &.start,
+  &.end {
     &:after {
       content: '';
       position: absolute;
@@ -131,10 +157,11 @@
 
   &.disabled {
     .selection.selection {
-      background-color: #EEE !important;
+      background-color: #eee !important;
 
-      .day, .month {
-        color: #AAA;
+      .day,
+      .month {
+        color: #aaa;
         font-weight: 300;
       }
     }
@@ -183,7 +210,7 @@
       border-bottom-right-radius: 50%;
 
       color: inherit !important;
-      background-color: #FFF !important;
+      background-color: #fff !important;
       border: 2px solid;
       box-sizing: border-box;
 
