--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,7 +1,14 @@
 // @Variables
-$textColor: #3d3d3d;
-$textColorDisabled: #AAA;
-$rowHeight: 56px;
+$rowHeight: 44px;
 $borderRadius: 3px;
-$borderColor: #E9E9E9;
-$cellHoverBg: #EFEFEF;
+
+$blue: #0f2346;
+$blue_10: #e7e8ec;
+$blue_15: #dbdee4;
+$blue_20: #cfd3da;
+$blue_25: #c3c8d1;
+$blue_35: #abb2c0;
+$blue_50: #8790a2;
+$blue_65: #647188;
+$blue_75: #4b5b76;
+$pink: #fd1f6d;
