--- a/src/Calendar/Range/Range.scss
+++ b/src/Calendar/Range/Range.scss
@@ -3,9 +3,9 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  width: $size - 4px;
-  height: $size - 4px;
-  margin-top: -0.5 * ($size - 4px);
-  margin-left: -0.5 * ($size - 4px);
+  width: $size;
+  height: $size;
+  margin-top: -0.5 * $size;
+  margin-left: -0.5 * $size;
   border-radius: 50%;
 }
