--- a/src/Month/Month.scss
+++ b/src/Month/Month.scss
@@ -1,4 +1,4 @@
-@import "../variables";
+@import '../variables';
 
 .root {
   // position: absolute;
@@ -6,7 +6,6 @@
 }
 .rows {
   position: relative;
-  background: linear-gradient(to bottom, rgba(255,255,255,0) 50%,rgba(0,0,0,0.05) 100%);
 }
 .row {
   padding: 0;
@@ -14,23 +13,9 @@
 
   &:first-child {
     text-align: right;
+  }
 
-    li {
-      background-color: #FFF;
-      box-shadow: 0 -1px 0 $borderColor;
-    }
-  }
-  &:nth-child(2) {
-    box-shadow: 0 -1px 0 $borderColor;
-  }
   &.partial {
-    &:first-child {
-      li {
-        &:first-child {
-          box-shadow: 0px -1px 0 #E9E9E9, inset 1px 0 0 #E9E9E9;
-        }
-      }
-    }
     &:last-of-type {
       li {
         position: relative;
@@ -54,7 +39,7 @@
   z-index: 3;
   pointer-events: none;
 
-  background-color: rgba(255,255,255,0.6);
+  background-color: rgba(255, 255, 255, 0.6);
 
   opacity: 0;
   transition: opacity 0.3s ease;
