--- a/src/Weekdays/Weekdays.scss
+++ b/src/Weekdays/Weekdays.scss
@@ -1,4 +1,4 @@
-@import "../variables";
+@import '../variables';
 
 .root {
   position: relative;
@@ -8,13 +8,14 @@
   padding: 0;
   margin: 0;
   list-style: none;
-  box-shadow: inset 0 -1px rgba(0,0,0,0.04);
+  box-shadow: inset 0 -1px rgba(0, 0, 0, 0.04);
 }
 
 .day {
-  padding: 15px 0;
+  padding: 10px 0;
   flex-basis: 1 / 7 * 100%;
   flex-grow: 1;
-  font-weight: 500;
+  font-weight: normal;
   text-align: center;
+  color: $blue_65;
 }
