--- a/src/Month/Month.scss
+++ b/src/Month/Month.scss
@@ -7,8 +7,9 @@
 .rows {
   position: relative;
   background: linear-gradient(
-    rgba(255, 255, 255, 0.44) 50%,
-    rgba(231, 232, 236, 0.55) 100%
+    to bottom,
+    rgba(255, 255, 255, 0) 50%,
+    rgba(231, 232, 236, 0.5) 100%
   );
 }
 .row {
