--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -3,6 +3,7 @@ $rowHeight: 40px;
 $borderRadius: 3px;
 
 $blue: #0f2346;
+$blue_5: #f3f4f6;
 $blue_10: #e7e8ec;
 $blue_15: #dbdee4;
 $blue_20: #cfd3da;
