--- a/src/Years/Years.scss
+++ b/src/Years/Years.scss
@@ -12,6 +12,7 @@ $cellSize: 40px;
   display: flex;
   align-items: center;
   justify-content: center;
+  background: linear-gradient(to bottom, $blue_10 0, #fff 6px);
   background-color: #fff;
 }
 
