--- a/src/Weekdays/Weekdays.scss
+++ b/src/Weekdays/Weekdays.scss
@@ -8,7 +8,7 @@
   padding: 0;
   margin: 0;
   list-style: none;
-  box-shadow: inset 0 -1px rgba(0, 0, 0, 0.04);
+  box-shadow: 0 6px 3px -3px $blue_10;
 }
 
 .day {
