--- a/src/Years/Years.scss
+++ b/src/Years/Years.scss
@@ -12,7 +12,7 @@ $cellSize: 40px;
   display: flex;
   align-items: center;
   justify-content: center;
-  background: linear-gradient(to bottom, $blue_10 0, #fff 6px);
+  background: linear-gradient(to bottom, rgba(15, 30, 70, 0.12) 0, #fff 3px);
   background-color: #fff;
 }
 
