--- a/src/Month/Month.scss
+++ b/src/Month/Month.scss
@@ -41,7 +41,6 @@
 }
 
 .label {
-  display: none;
   position: absolute;
   top: 0;
   bottom: 0;
@@ -50,12 +49,12 @@
 
   margin: 0;
 
-  font-size: 30px;
-  font-weight: 500;
+  font-size: 24px;
+  font-weight: bold;
   z-index: 3;
   pointer-events: none;
 
-  background-color: rgba(255, 255, 255, 0.6);
+  background-color: rgba(255, 255, 255, 0.85);
 
   opacity: 0;
   transition: opacity 0.3s ease;
