--- a/src/Weekdays/Weekdays.scss
+++ b/src/Weekdays/Weekdays.scss
@@ -8,7 +8,7 @@
   padding: 0;
   margin: 0;
   list-style: none;
-  box-shadow: 0 6px 3px -3px $blue_10;
+  box-shadow: 0 3px 3px 0 rgba(15, 30, 70, 0.12);
 }
 
 .day {
