--- a/src/Day/Day.scss
+++ b/src/Day/Day.scss
@@ -4,7 +4,7 @@
 .root {
   display: inline-block;
   box-sizing: border-box;
-  width: 1 / 7 * 100%;
+  width: 40px;
   list-style: none;
   font-size: 12px;
   text-align: center;
