--- a/src/Weekdays/Weekdays.scss
+++ b/src/Weekdays/Weekdays.scss
@@ -9,12 +9,13 @@
   margin: 0;
   list-style: none;
   box-shadow: 0 3px 3px 0 rgba(15, 30, 70, 0.12);
+  justify-content: center;
 }
 
 .day {
   line-height: 40px;
-  flex-basis: 1 / 7 * 100%;
-  flex-grow: 1;
+  flex-basis: 40px;
+  flex-grow: 0;
   font-weight: normal;
   text-align: center;
   color: $blue_65;
