--- a/styles.css
+++ b/styles.css
@@ -1,31 +1,3 @@
-/*  imported from Container.scss  */
-
-.Cal__Container__root {
-  position: relative;
-  display: table;
-  z-index: 1;
-  font: 12px 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  line-height: 1.4em;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  font-weight: normal;
-  outline: none;
-  text-align: left; }
-  .Cal__Container__root.Cal__Container__landscape {
-    display: flex;
-    flex-direction: row; }
-    .Cal__Container__root.Cal__Container__landscape .Cal__Container__wrapper {
-      position: relative;
-      flex-grow: 1;
-      overflow: hidden;
-      z-index: 1;
-      border-top-right-radius: 3px;
-      border-bottom-right-radius: 3px; }
-
-.Cal__Container__listWrapper {
-  position: relative;
-  overflow: hidden;
-  background-color: #fff; }
 /*
   imported from Day.scss 
  */
@@ -255,455 +227,9 @@
 
 .Cal__Day__range.Cal__Day__selected.Cal__Day__betweenRange .Cal__Day__month {
   display: none; }
-/*  imported from Slider.scss  */
 
-.Cal__Slider__root, .Cal__Slider__slide {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0; }
+.Cal__Day__startOfMonth {
+  border-radius: 50% 0 0 0; }
 
-.Cal__Slider__root {
-  overflow: hidden; }
-
-.Cal__Slider__slide {
-  padding: 20px 65px; }
-  .Cal__Slider__slide:first-child {
-    padding-left: 20px; }
-
-.Cal__Slider__wrapper {
-  height: 100%;
-  transition: transform 0.3s ease; }
-
-.Cal__Slider__arrow {
-  position: absolute;
-  top: 0;
-  z-index: 1;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 40px;
-  height: 100%;
-  opacity: 0.7;
-  cursor: pointer;
-  border-left: 1px solid rgba(255, 255, 255, 0.1); }
-  .Cal__Slider__arrow svg {
-    width: 15px; }
-  .Cal__Slider__arrow:hover {
-    opacity: 1; }
-
-.Cal__Slider__arrowRight {
-  right: 0; }
-
-.Cal__Slider__arrowLeft {
-  left: 0;
-  transform: scaleX(-1); }
-/*  imported from transition.scss  */
-
-.Cal__transition__enter {
-  opacity: 0; }
-
-.Cal__transition__enterActive {
-  opacity: 1;
-  transition: opacity 0.3s ease; }
-
-.Cal__transition__leave {
-  opacity: 1; }
-
-.Cal__transition__leaveActive {
-  opacity: 0;
-  transition: opacity 0.3s ease; }
-/*  imported from Header.scss  */
-
-.Cal__Header__root {
-  position: relative;
-  display: flex;
-  align-items: center;
-  box-sizing: border-box;
-  overflow: hidden;
-  min-height: 98px;
-  padding: 20px;
-  line-height: 1.3;
-  font-weight: 400;
-  border-top-left-radius: 3px;
-  border-top-right-radius: 3px; }
-  .Cal__Header__root.Cal__Header__landscape {
-    align-items: flex-start;
-    min-width: 200px;
-    border-top-right-radius: 0;
-    border-bottom-left-radius: 3px; }
-    .Cal__Header__root.Cal__Header__landscape .Cal__Header__dateWrapper.Cal__Header__day {
-      flex-grow: 1;
-      height: 76px; }
-
-.Cal__Header__wrapper {
-  display: flex;
-  flex-direction: column;
-  flex-grow: 1;
-  cursor: pointer; }
-  .Cal__Header__wrapper.Cal__Header__blank {
-    height: 58px;
-    line-height: 58px;
-    color: rgba(255, 255, 255, 0.5);
-    font-size: 18px;
-    cursor: default; }
-
-.Cal__Header__dateWrapper {
-  position: relative;
-  display: block;
-  overflow: hidden;
-  color: rgba(255, 255, 255, 0.5);
-  transition: color 0.3s ease; }
-  .Cal__Header__dateWrapper.Cal__Header__active {
-    color: white; }
-  .Cal__Header__dateWrapper.Cal__Header__day {
-    height: 38px;
-    font-size: 36px;
-    line-height: 36px;
-    text-transform: capitalize; }
-  .Cal__Header__dateWrapper.Cal__Header__year {
-    height: 20px;
-    font-size: 18px;
-    line-height: 18px; }
-
-.Cal__Header__date {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0; }
-
-.Cal__Header__range {
-  display: flex;
-  flex-grow: 1; }
-  .Cal__Header__range .Cal__Header__dateWrapper {
-    overflow: visible; }
-  .Cal__Header__range .Cal__Header__wrapper:first-child:before, .Cal__Header__range .Cal__Header__wrapper:first-child:after {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 50%;
-    width: 0;
-    height: 0;
-    margin-top: -50px;
-    margin-left: -50px;
-    border-top: 100px solid transparent;
-    border-bottom: 100px solid transparent;
-    border-left: 60px solid; }
-  .Cal__Header__range .Cal__Header__wrapper:first-child:before {
-    color: rgba(255, 255, 255, 0.15);
-    transform: translateX(1px); }
-  .Cal__Header__range .Cal__Header__wrapper:last-child {
-    margin-left: 60px; }
-  .Cal__Header__range .Cal__Header__wrapper .Cal__Header__date {
-    white-space: nowrap;
-    z-index: 1; }
-/*  imported from Animation.scss  */
-
-.Cal__Animation__enter {
-  opacity: 0;
-  transform: translate3d(0, -100%, 0);
-  transition: 0.25s ease; }
-
-.Cal__Animation__enter.Cal__Animation__enterActive {
-  opacity: 1;
-  transform: translate3d(0, 0, 0); }
-
-.Cal__Animation__leave {
-  transform: translate3d(0, 0, 0);
-  transition: 0.25s ease; }
-
-.Cal__Animation__leave.Cal__Animation__leaveActive {
-  opacity: 0;
-  transform: translate3d(0, 100%, 0); }
-/*  imported from Month.scss  */
-
-.Cal__Month__root.Cal__Month__even .Cal__Month__row li {
-  background-color: #fff; }
-
-.Cal__Month__root.Cal__Month__odd .Cal__Month__row li {
-  background-color: #f3f4f6; }
-
-.Cal__Month__rows {
-  position: relative; }
-
-.Cal__Month__row {
-  padding: 0;
-  margin: 0 auto;
-  width: 280px; }
-  .Cal__Month__row:first-child {
-    text-align: right; }
-  .Cal__Month__row.Cal__Month__partial:last-of-type li {
-    position: relative;
-    z-index: 1; }
-
-.Cal__Month__label {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  margin: 0;
-  font-size: 24px;
-  font-weight: bold;
-  z-index: 3;
-  pointer-events: none;
-  background-color: rgba(255, 255, 255, 0.85);
-  opacity: 0;
-  transition: opacity 0.3s ease; }
-  .Cal__Month__label > span {
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 40px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-transform: capitalize; }
-  .Cal__Month__label.Cal__Month__partialFirstRow {
-    top: 40px; }
-/*  imported from MonthList.scss  */
-
-.Cal__MonthList__root {
-  width: 100% !important;
-  -webkit-overflow-scrolling: touch; }
-  .Cal__MonthList__root.Cal__MonthList__scrolling > div {
-    pointer-events: none; }
-  .Cal__MonthList__root.Cal__MonthList__scrolling label {
-    opacity: 1; }
-/*  imported from Today.scss  */
-
-.Cal__Today__root {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 22px;
-  padding: 6px;
-  box-sizing: border-box;
-  transform: translate3d(0, -100%, 0);
-  font-weight: 500;
-  line-height: 0;
-  z-index: 10;
-  cursor: pointer;
-  transition: transform 0.3s ease;
-  transition-delay: 0.3s; }
-  .Cal__Today__root.Cal__Today__show {
-    transform: translate3d(0, 0, 0);
-    transition-delay: 0s; }
-    .Cal__Today__root.Cal__Today__show .Cal__Today__chevron {
-      transition: transform 0.3s ease; }
-  .Cal__Today__root .Cal__Today__chevron {
-    margin-top: 2px;
-    margin-left: 5px;
-    transform: rotate(270deg);
-    transition: transform 0.3s ease; }
-  .Cal__Today__root.Cal__Today__chevronUp .Cal__Today__chevron {
-    transform: rotate(180deg); }
-  .Cal__Today__root.Cal__Today__chevronDown .Cal__Today__chevron {
-    transform: rotate(360deg); }
-/*  imported from Weekdays.scss  */
-
-.Cal__Weekdays__root {
-  position: relative;
-  z-index: 5;
-  display: flex;
-  padding: 0;
-  margin: 0;
-  list-style: none;
-  box-shadow: 0 3px 3px 0 rgba(15, 30, 70, 0.12);
-  justify-content: center; }
-
-.Cal__Weekdays__day {
-  line-height: 40px;
-  flex-basis: 40px;
-  flex-grow: 0;
-  font-weight: normal;
-  text-align: center;
-  color: #647188; }
-/*
-  imported from Years.scss 
- */
-
-.Cal__Years__root {
-  position: absolute;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: 10;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background: linear-gradient(to bottom, rgba(15, 30, 70, 0.12) 0, #fff 3px);
-  background-color: #fff; }
-
-.Cal__Years__list {
-  box-sizing: border-box; }
-  .Cal__Years__list.Cal__Years__center {
-    display: flex;
-    align-items: center;
-    justify-content: center; }
-
-.Cal__Years__year {
-  display: flex;
-  padding: 0 20px;
-  height: 100%;
-  align-items: center;
-  justify-content: center;
-  font-size: 12px;
-  font-weight: bold;
-  text-align: center;
-  cursor: pointer;
-  -webkit-user-select: none;
-  box-sizing: border-box; }
-  .Cal__Years__year.Cal__Years__withMonths {
-    border-bottom: 1px solid #dbdee4; }
-    .Cal__Years__year.Cal__Years__withMonths label {
-      height: 80px;
-      line-height: 40px;
-      box-sizing: border-box; }
-  .Cal__Years__year label {
-    flex-basis: 42%; }
-    .Cal__Years__year label span {
-      flex-shrink: 0;
-      color: #0f2346; }
-  .Cal__Years__year ol {
-    display: flex;
-    flex-wrap: wrap;
-    margin: 0;
-    padding: 0;
-    min-width: 240px;
-    font-size: 12px; }
-    .Cal__Years__year ol li {
-      display: flex;
-      width: 40px;
-      height: 40px;
-      flex-shrink: 0;
-      align-items: center;
-      justify-content: center;
-      list-style: none;
-      border-radius: 50%;
-      box-sizing: border-box;
-      color: #0f2346;
-      font-weight: normal;
-      text-transform: capitalize; }
-      .Cal__Years__year ol li.Cal__Years__currentMonth {
-        border: 1px solid; }
-      .Cal__Years__year ol li.Cal__Years__selected {
-        position: relative;
-        z-index: 1;
-        color: #fff;
-        border: 0; }
-        .Cal__Years__year ol li.Cal__Years__selected .Cal__Years__selection {
-          content: '';
-          position: absolute;
-          top: 50%;
-          left: 50%;
-          width: 40px;
-          height: 40px;
-          margin-top: -20px;
-          margin-left: -20px;
-          border-radius: 50%;
-          line-height: 40px;
-          z-index: 2; }
-      .Cal__Years__year ol li.Cal__Years__disabled {
-        cursor: not-allowed;
-        color: #c3c8d1; }
-        .Cal__Years__year ol li.Cal__Years__disabled:hover {
-          background-color: inherit; }
-      .Cal__Years__year ol li:hover {
-        background-color: #e7e8ec; }
-  .Cal__Years__year:hover label > span, .Cal__Years__year.Cal__Years__active label > span {
-    color: #fd1f6d; }
-  .Cal__Years__year:hover, .Cal__Years__year.Cal__Years__active {
-    position: relative; }
-  .Cal__Years__year.Cal__Years__active {
-    font-size: 32px; }
-  .Cal__Years__year.Cal__Years__currentYear {
-    position: relative; }
-    .Cal__Years__year.Cal__Years__currentYear label > span {
-      min-width: 50px;
-      padding-bottom: 5px;
-      border-bottom: 3px solid; }
-    .Cal__Years__year.Cal__Years__currentYear.Cal__Years__active label > span {
-      min-width: 85px; }
-  .Cal__Years__year.Cal__Years__first {
-    padding-top: 0; }
-  .Cal__Years__year.Cal__Years__last {
-    padding-bottom: 0;
-    border-bottom: none; }
-
-/*
- * Range selection styles
- */
-.Cal__Years__range.Cal__Years__selected.Cal__Years__start:after, .Cal__Years__range.Cal__Years__selected.Cal__Years__end:after {
-  content: '';
-  position: absolute;
-  top: 50%;
-  width: 50%;
-  height: 40px;
-  margin-top: -20px;
-  background-color: #c3c8d1; }
-
-.Cal__Years__range.Cal__Years__selected.Cal__Years__start .Cal__Years__selection, .Cal__Years__range.Cal__Years__selected.Cal__Years__end .Cal__Years__selection {
-  font-weight: bold;
-  color: #fff;
-  background-color: #0f2346;
-  box-sizing: border-box; }
-
-.Cal__Years__range.Cal__Years__selected.Cal__Years__disabled {
-  background-color: #c3c8d1 !important; }
-  .Cal__Years__range.Cal__Years__selected.Cal__Years__disabled .Cal__Years__selection.Cal__Years__selection {
-    background-color: #c3c8d1 !important;
-    color: #fff; }
-  .Cal__Years__range.Cal__Years__selected.Cal__Years__disabled:after {
-    background-color: #c3c8d1 !important; }
-
-.Cal__Years__range.Cal__Years__selected.Cal__Years__start .Cal__Years__selection {
-  border-top-left-radius: 50%;
-  border-bottom-left-radius: 50%; }
-
-.Cal__Years__range.Cal__Years__selected.Cal__Years__start:after {
-  right: 0; }
-
-.Cal__Years__range.Cal__Years__selected.Cal__Years__start.Cal__Years__end:after {
-  display: none; }
-
-.Cal__Years__range.Cal__Years__selected.Cal__Years__end:after {
-  left: 0; }
-
-.Cal__Years__range.Cal__Years__selected.Cal__Years__end .Cal__Years__selection {
-  border-top-right-radius: 50%;
-  border-bottom-right-radius: 50%; }
-
-.Cal__Years__range.Cal__Years__selected:nth-child(6n).Cal__Years__start:after {
-  display: none; }
-
-.Cal__Years__range.Cal__Years__selected:nth-child(6n + 1).Cal__Years__end:after {
-  display: none; }
-
-.Cal__Years__range.Cal__Years__selected.Cal__Years__betweenRange {
-  border-radius: 0;
-  background-color: #c3c8d1 !important; }
-  .Cal__Years__range.Cal__Years__selected.Cal__Years__betweenRange .Cal__Years__selection {
-    left: 0;
-    right: 0;
-    width: 100%;
-    margin-left: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #0f2346; }
-
-.Cal__Years__range.Cal__Years__selected:nth-child(6n + 1).Cal__Years__betweenRange {
-  border-top-left-radius: 50%;
-  border-bottom-left-radius: 50%; }
-
-.Cal__Years__range.Cal__Years__selected:nth-child(6n).Cal__Years__betweenRange {
-  border-top-right-radius: 50%;
-  border-bottom-right-radius: 50%; }
+.Cal__Day__endOfMonth {
+  border-radius: 0 0 50% 0; }
