--- a/styles.css
+++ b/styles.css
@@ -73,6 +73,8 @@
       right: 0; }
     .Cal__Day__root.Cal__Day__hovered.Cal__Day__endOfWeek:after {
       left: 0; }
+    .Cal__Day__root.Cal__Day__hovered.Cal__Day__startOfEvenMonth:before, .Cal__Day__root.Cal__Day__hovered.Cal__Day__startOfOddMonth:before, .Cal__Day__root.Cal__Day__hovered.Cal__Day__endOfEvenMonth:before, .Cal__Day__root.Cal__Day__hovered.Cal__Day__endOfOddMonth:before {
+      background-color: #e7e8ec !important; }
   .Cal__Day__root.Cal__Day__enabled.Cal__Day__highlighted, .Cal__Day__root.Cal__Day__enabled:active, .Cal__Day__root.Cal__Day__enabled:hover {
     position: relative;
     z-index: 1; }
@@ -279,6 +281,8 @@
 
 .Cal__Day__startOfOddMonth {
   background-color: #fff !important; }
+  .Cal__Day__startOfOddMonth.Cal__Day__enabled {
+    background-color: #f3f4f6 !important; }
   .Cal__Day__startOfOddMonth:before {
     background-color: #f3f4f6; }
   .Cal__Day__startOfOddMonth:hover {
@@ -308,7 +312,9 @@
 
 .Cal__Day__endOfEvenMonth {
   background-color: #fff !important;
-  border-radius: 0; }
+  border-radius: 0 0 50% 0; }
+  .Cal__Day__endOfEvenMonth.Cal__Day__enabled {
+    background-color: #f3f4f6 !important; }
   .Cal__Day__endOfEvenMonth:before {
     background-color: #f3f4f6; }
   .Cal__Day__endOfEvenMonth:hover {
