--- a/styles.css
+++ b/styles.css
@@ -177,6 +177,8 @@
   height: 40px;
   transform: translateY(-50%);
   background-color: #c3c8d1; }
+  .Cal__Day__edge .Cal__Day__range.Cal__Day__selected.Cal__Day__start:after, .Cal__Day__edge .Cal__Day__range.Cal__Day__selected.Cal__Day__end:after {
+    background-color: #0f2346; }
 
 .Cal__Day__range.Cal__Day__selected.Cal__Day__start.Cal__Day__endOfWeek:after, .Cal__Day__range.Cal__Day__selected.Cal__Day__end.Cal__Day__startOfWeek:after {
   display: none; }
@@ -257,6 +259,10 @@
 
 .Cal__Day__range.Cal__Day__selected.Cal__Day__betweenRange .Cal__Day__month {
   display: none; }
+
+.Cal__Day__edge .Cal__Day__range.Cal__Day__selected.Cal__Day__selected .Cal__Day__selection {
+  color: #fff !important;
+  background-color: #0f2346 !important; }
 
 .Cal__Day__startOfMonth {
   position: relative;
