--- a/demo/src/demo.css
+++ b/demo/src/demo.css
@@ -1,12 +1,13 @@
-
-  html, body, #demo {
-    width: 100%;
-    height: 100%;
-    margin: 0;
-  }
-  #demo {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: #f3f3f3;
-  }
+html,
+body,
+#demo {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+}
+#demo {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #f3f3f3;
+}
