--- a/src/Header/Header.scss
+++ b/src/Header/Header.scss
@@ -36,7 +36,7 @@
   &.blank {
     height: 58px;
     line-height: 58px;
-    color: rgba(255,255,255,0.5);
+    color: rgba(var(--background),0.5);
     font-size: 18px;
     cursor: default;
   }
@@ -46,11 +46,11 @@
   position: relative;
   display: block;
   overflow: hidden;
-  color: rgba(255,255,255,0.5);
+  color: rgba(var(--background),0.5);
   transition: color 0.3s ease;
 
   &.active {
-    color: rgb(255,255,255);
+    color: var(--text);
   }
   &.day {
     height: 38px;
@@ -99,7 +99,7 @@
       }
 
       &:before {
-        color: rgba(255,255,255, 0.15);
+        color: rgba(var(--text), 0.15);
         transform: translateX(1px);
       }
     }
