--- a/src/Header/Slider/Slider.scss
+++ b/src/Header/Slider/Slider.scss
@@ -36,7 +36,7 @@
 
   opacity: 0.7;
   cursor: pointer;
-  border-left: 1px solid rgba(255,255,255,0.1);
+  border-left: 1px solid rgba(var(--background),0.1);
 
   svg {
     width: 15px;
