--- a/src/Day/Day.scss
+++ b/src/Day/Day.scss
@@ -24,7 +24,7 @@
       position: absolute;
       top: 50%;
       transform: translateY(-50%);
-      background-color: var(--day-selection);
+      background-color: $blue_10;
       z-index: -1;
     }
 
@@ -34,7 +34,7 @@
       background-color: transparent;
       &:before {
         @include circle($rowHeight);
-        background-color: var(--day-selection);
+        background-color: $blue_10;
         z-index: -1;
       }
       &:after {
@@ -58,7 +58,7 @@
     &.startOfOddMonth:before,
     &.endOfEvenMonth:before,
     &.endOfOddMonth:before {
-      background-color: var(--day-selection) !important;
+      background-color: $blue_10 !important;
     }
   }
 
@@ -72,7 +72,7 @@
       &:before {
         @include circle($rowHeight);
 
-        background-color: var(--day-selection);
+        background-color: $blue_10;
         z-index: -1;
       }
     }
@@ -92,11 +92,11 @@
     z-index: 2;
 
     > span {
-      color: var(--primary);
+      color: $blue;
     }
 
     &.disabled > span {
-      color: var(--primary_20);
+      color: $blue_20;
     }
 
     &:before {
@@ -106,7 +106,7 @@
     }
 
     &.disabled:before {
-      box-shadow: inset 0 0 0 1px var(--primary_25);
+      box-shadow: inset 0 0 0 1px $blue_25;
     }
   }
 
@@ -128,7 +128,7 @@
       z-index: 2;
 
       .month {
-        color: var(--background);
+        color: #fff;
         top: 7px;
       }
       .day {
@@ -140,7 +140,7 @@
     }
   }
   &.disabled {
-    color: var(--primary_20);
+    color: $blue_20;
     cursor: not-allowed;
   }
 }
@@ -157,12 +157,12 @@
 }
 
 .month {
-  color: var(--month);
+  color: $blue_65;
   top: 2px;
 }
 
 .year {
-  color: var(--month);
+  color: $blue_65;
   bottom: 3px;
 }
 
@@ -182,10 +182,10 @@
       width: 50%;
       height: $rowHeight;
       transform: translateY(-50%);
-      background-color: var(--primary_25);
+      background-color: $blue_25;
 
       .edge & {
-        background-color: var(--primary);
+        background-color: $blue;
       }
     }
   }
@@ -199,11 +199,11 @@
 
   &.disabled {
     .selection.selection {
-      background-color: var(--primary_25) !important;
+      background-color: $blue_25 !important;
 
       .day,
       .month {
-        color: var(--background);
+        color: #fff;
         font-weight: normal;
       }
     }
@@ -251,8 +251,8 @@
       justify-content: center;
       align-items: center;
       border-radius: 0;
-      color: var(--primary) !important;
-      background-color: var(--primary_25) !important;
+      color: $blue !important;
+      background-color: $blue_25 !important;
     }
 
     &.startOfWeek,
@@ -272,7 +272,7 @@
         width: 50%;
         height: $rowHeight;
         transform: translateY(-50%);
-        background-color: var(--primary_25);
+        background-color: $blue_25;
       }
     }
 
@@ -310,8 +310,8 @@
 
   &.selected .selection {
     .edge & {
-      color: var(--background) !important;
-      background-color: var(--primary) !important;
+      color: #fff !important;
+      background-color: $blue !important;
     }
   }
 }
@@ -332,36 +332,36 @@
 }
 
 .startOfEvenMonth {
-  background-color: var(--primary_5) !important;
+  background-color: $blue_5 !important;
   border-radius: 0;
 
   &:before {
-    background-color: var(--background);
+    background-color: #fff;
   }
 
   &:hover {
-    background-color: var(--primary_5) !important;
+    background-color: $blue_5 !important;
     border-radius: 0 50% 50% 50%;
   }
 
   &.selected {
-    background-color: var(--background) !important;
+    background-color: #fff !important;
   }
 }
 
 .startOfOddMonth {
-  background-color: var(--background) !important;
+  background-color: #fff !important;
 
   &.enabled {
-    background-color: var(--primary_5) !important;
+    background-color: $blue_5 !important;
   }
 
   &:before {
-    background-color: var(--primary_5);
+    background-color: $blue_5;
   }
 
   &:hover {
-    background-color: var(--primary_5) !important;
+    background-color: $blue_5 !important;
     border-radius: 50% 0 0 0;
   }
 }
@@ -382,38 +382,38 @@
 }
 
 .endOfOddMonth {
-  background-color: var(--primary_5) !important;
+  background-color: $blue_5 !important;
   border-radius: 0;
 
   &:before {
-    background-color: var(--background);
+    background-color: #fff;
   }
 
   &:hover {
-    background-color: var(--primary_5) !important;
+    background-color: $blue_5 !important;
     border-radius: 50% 50% 0 50%;
   }
 
   &.selected {
-    background-color: var(--primary_5) !important;
+    background-color: $blue_5 !important;
     border-radius: 50% 50% 0 50%;
   }
 }
 
 .endOfEvenMonth {
-  background-color: var(--background) !important;
+  background-color: #fff !important;
   border-radius: 0 0 50% 0;
 
   &.enabled {
-    background-color: var(--primary_5) !important;
+    background-color: $blue_5 !important;
   }
 
   &:before {
-    background-color: var(--primary_5);
+    background-color: $blue_5;
   }
 
   &:hover {
-    background-color: var(--primary_5) !important;
+    background-color: $blue_5 !important;
     border-radius: 0 0 50% 0;
   }
 }
