--- a/src/Weekdays/Weekdays.scss
+++ b/src/Weekdays/Weekdays.scss
@@ -8,7 +8,7 @@
   padding: 0;
   margin: 0;
   list-style: none;
-  box-shadow: 0 3px 3px 0 rgba(var(--primary), 0.12);
+  box-shadow: 0 3px 3px 0 rgba(15, 30, 70, 0.12);
   justify-content: center;
 }
 
@@ -18,5 +18,5 @@
   flex-grow: 0;
   font-weight: normal;
   text-align: center;
-  color: var(--month);
+  color: $blue_65;
 }
